# hashtag-robotic-studio

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements-strands-target.txt
.codex/: README.md  config.toml
.codex/agents/: agent-ops-architect.toml  docs-memory-curator.toml  frontend-engineer.toml  local-gateway-architect.toml  product-architect.toml  robot-safety-reviewer.toml  sdk-integration-engineer.toml  test-qa-engineer.toml  ux-designer.toml
.codex/prompts/: parallel-review-template.md  phase-autopilot.md  phase-goal-template.md
.github/workflows/: pages.yml
.memory/: README.md  common.py  compact.py  ingest.py  ingest_all.py  memory.schema.json  query.py  requirements.txt  seed_manifest.json
apps/desktop/: README.md  app.js  index.html  styles.css
docs/: AGENT_ROBOT_CONTROL_MODEL.md  ARCHITECTURE.md  AUTONOMOUS_CODEX_WORKFLOW.md  CODEX_CLI_WORKFLOW.md  CURRENT_SPRINT.md  EXPERT_AGENT_SYSTEM.md  IMPLEMENTATION_ROADMAP.md  PRODUCT_SPEC.md  PROJECT_STATE.md  REFERENCE_INDEX.md  SAFETY_MODEL.md  SDK_STRATEGY.md  TOKEN_EFFICIENCY.md  UI_UX_SYSTEM.md  VERSION_PLAN.md  _config.yml  index.md
docs/_layouts/: default.html
docs/assets/: tutorial.css  tutorial.js
docs/templates/: vault-note-template.md
docs/tutorials/: so101-studio-github-pages-guide.md
roadmap/: phases.json
services/: __init__.py
tests/: test_desktop_static.py  test_gateway_api.py  test_operation_state_machine.py  test_safety_gate.py  test_tutorial_content.py  test_ui_contracts.py
tools/: README.md  context_pack.py  next_task.py  update_worklog.py  verify_phase.py
(+54 files in other folders)
