[project]
name = "hashtag-robotic-studio"
version = "0.1.0"
description = "Local-first SO101 robot studio workspace and gateway prototype."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
